Fix Light/Dark modes on Home.

--- a/websites/verkilo.com/_sass/_colors.scss
+++ b/websites/verkilo.com/_sass/_colors.scss
@@ -4,17 +4,20 @@ $system-fonts: -apple-system,BlinkMacSystemFont,system-ui,"Segoe UI",Helvetica,A
 
 @import 'blue';
 
-$gray-50: #f2f2f3;
-$gray-100: #dfdde2;
-$gray-200: #cac7cf;
-$gray-300: #b4b1bb;
-$gray-400: #a4a0ad;
-$gray-500: #948f9e;
-$gray-600: #8c8796;
-$gray-700: #817c8c;
-$gray-800: #777282;
-$gray-900: #656070;
+$gray: desaturate($primary-400, 10%);
+$white:    lighten($gray, 80%);
+$gray-50:  lighten($gray, 60%);
+$gray-100: lighten($gray, 30%);
+$gray-200: lighten($gray, 15%);
+$gray-300: lighten($gray, 10%);
+$gray-400: lighten($gray, 5%);
+$gray-500: lighten($gray, 0%);
+$gray-600: darken($gray, 5%);
+$gray-700: darken($gray, 10%);
+$gray-800: darken($gray, 15%);
+$gray-900: darken($gray, 20%);
 $black: #161519;
+$home-icon: $secondary-500;
 
 $red: #BE5046;
 $green: #2C7D53;
@@ -29,10 +32,18 @@ $purple: #BD4275;
   --font-serif: "Source Serif Pro",#{$system-fonts};
   --font-system: #{$system-fonts};
   --foreground: #{contrast($gray-500, #FFF,7)};
+  --background: #FFF;
+  --jumbo-bg: #{$primary-500};
+  --jumbo-fg: #{contrast($gray-500, $primary-500, 7)};
+  --secondary-bg: #{$secondary-100};
+  --secondary-fg: #{contrast($gray-500, $secondary-100, 7)};
+  --card-bg: #{$primary-50};
+  --card-fg: #{$primary-900};
+  --card-icon: #{contrast($home-icon, $primary-50)};
+  --feature-icon: #{contrast($home-icon, #FFF)};
   --gray: #{$gray-300};
   --silver: #{$gray-700};
   --mono-2: #{$gray-600};
-  --background: #{$gray-900};
   --card-background: #{$gray-800};
   --midnight: #{$gray-100};
   --black: #{$gray-200};
@@ -76,13 +87,21 @@ $purple: #BD4275;
 $dark-background: $primary-900;
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary: #{contrast(#BE5046, $dark-background, 1.0)};
+    --primary: #{$primary-400};
     --foreground: #{contrast($gray-500, $dark-background,7)};
     --gray: #{$gray-400};
     --silver: #{$gray-700};
     --mono-2: #{$gray-500};
-    --background: #{$gray-200};
-    --navbar-background: #{$gray-100};
+    --background: #{$gray-800};
+    --jumbo-bg: #{$primary-500};
+    --jumbo-fg: #{contrast($gray-500, $primary-500, 7)};
+    --secondary-bg: #{$secondary-800};
+    --secondary-fg: #{contrast($gray-500, $secondary-800, 7)};
+    --card-fg: #{$primary-50};
+    --card-bg: #{$primary-900};
+    --card-icon: #{contrast($home-icon, $primary-900)};
+    --feature-icon: #{contrast($home-icon, $dark-background)};
+    --navbar-background: #{$primary-400} !important;
     --card-background: #{$gray-300};
     --black: #{$gray-200};
     --midnight: #{$gray-100};
