--- a/websites/verkilo.com/assets/main.scss
+++ b/websites/verkilo.com/assets/main.scss
@@ -12,7 +12,7 @@
   background: var(--navbar-background) !important;
 }
 body {
-  color: var(--foreground);
+  color: var(--foreground) !important;
   font-family: "Source Sans pro";
 }
 footer {
